pheromone colors added

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,8 @@
   --error: #cf6679;
   --primary: #EDF67D;
   --primaryVariant: #E8F353;
+  --Pheromones: #7327a7;
+  --onPheromones: #6d17a7;
 }
 
 .indexContent {
