--- a/styles.css
+++ b/styles.css
@@ -113,7 +113,7 @@ p {
   background-color: var(--primary);
 }
 
-.header {
+#header {
   display: flex;
   align-items: center; 
   justify-content: center;
