clustering beta version

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
   --onBackground: #0f0f0f;
   --error: #cf6679;
   --primary: #EDF67D;
-  --primaryVariant: #E8F353;
+  --primaryVariant: #ced841;
   --pheromones: #7327a7;
   --onPheromones: #6d17a7;
 }
