--- a/styles.css
+++ b/styles.css
@@ -166,7 +166,7 @@ p {
 footer {
   z-index: 2;
   color: var(--onBackground);
-  background-color: var(--primaryVariant);
+  background-color: var(--primary);
   position: fixed;
   left: 0; bottom: 0;
   width: 100%;
