--- a/styles.css
+++ b/styles.css
@@ -78,11 +78,11 @@ p {
   transition: background-color 100ms;
 }
 
-#upperPanel:hover{
+#upperPanel:hover {
   background-color: var(--onBackground);
 }
 
-#upperPanel:hover #movingPanel{
+#upperPanel:hover #movingPanel {
   background-color: var(--onBackground);
   display: block;
 }
@@ -91,7 +91,7 @@ p {
   display: flex;
 }
 
-#upperPanel:hover .navbar{
+#upperPanel:hover .navbar {
   display: flex;
 }
 
@@ -101,7 +101,7 @@ p {
   align-content: center;
 }
 
-.navbar button{
+.navbar button {
   border: 0.2vmin solid var(--primary);
   margin-left: 0.5vmin;
   margin-right: 0.5vmin;
@@ -116,7 +116,7 @@ p {
 
 #header {
   display: flex;
-  align-items: center; 
+  align-items: center;
   justify-content: center;
   font-size: 250%;
 }
@@ -130,13 +130,13 @@ p {
 .algViewer {
   display: flex;
   height: 82%;
-  align-items: center; 
+  align-items: center;
   justify-content: center;
 }
 
 .algDisplay {
-  display:flex;
-  align-items: center; 
+  display: flex;
+  align-items: center;
   justify-content: center;
   width: 90%;
   margin-top: 1%;
@@ -168,11 +168,12 @@ footer {
   color: var(--onBackground);
   background-color: var(--primary);
   position: fixed;
-  left: 0; bottom: 0;
+  left: 0;
+  bottom: 0;
   width: 100%;
   height: 5%;
-  display: flex; 
-  align-items: center; 
+  display: flex;
+  align-items: center;
   justify-content: center;
 }
 
@@ -182,4 +183,11 @@ a {
 
 a:visited {
   color: inherit;
+}
+
+#controlHelper {
+  border: 0.2vmin solid #a2a2a2;
+  margin: 10px;
+  color: #a2a2a2;
+  text-align: center;
 }
